fix css bleeding

--- a/olympi-client/src/components/Profile/PersonalBio/PersonalBio.css
+++ b/olympi-client/src/components/Profile/PersonalBio/PersonalBio.css
@@ -56,7 +56,9 @@ font-size: 12px;
 font-weight:500;
 margin-bottom: 10px;
 }
-input[type=text], input[type=email], input[type=password] {
+.PersonalBioContainer input[type=text], 
+.PersonalBioContainer input[type=email], 
+.PersonalBioContainer input[type=password] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -74,7 +76,7 @@ cursor: pointer;
 {
   cursor: pointer;
 }
-.updateButton{
+.PersonalBioContainer.updateButton{
 
     background-color: #E41E1E;
     border: none;
