--- a/olympi-client/src/components/auth/auth.css
+++ b/olympi-client/src/components/auth/auth.css
@@ -86,7 +86,7 @@
 }
 
 #career-start {
-  background-color: white;
+  background-color: #f1f1f1;
   border:1px solid #E1E1E1;
   border-radius: 5px;
   display: block;
